--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -1,8 +1,10 @@
 name: 02 - Workflow Events
 
 on:
-    push
-
+    - push
+    - pull_request
+    - workflow_dispatch
+    
 jobs:
     echo:
         runs-on: ubuntu-latest
