--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -1,10 +1,12 @@
 name: 02 - Workflow Events
 
 on:
-    - push
-    - pull_request
-    - workflow_dispatch
-    
+    push:
+    pull_request:
+    schedule:
+        - cron: "*/5 * * * *"
+    workflow_dispatch:
+        
 jobs:
     echo:
         runs-on: ubuntu-latest
