--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -13,4 +13,4 @@ jobs:
         steps:
             - name: Show the trigger
               run: |
-                echo 'Event name: ${{github.event_name}}'
+                echo 'The workflow has been triggered by a(n) ${{github.event_name}} event.'
