--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -17,4 +17,4 @@ jobs:
               shell: bash
               run: |
                 echo 'This job is running on a Windows runner.'
-                "Runner OS: $RUNNER_OS"
+                echo "Runner OS: $RUNNER_OS"
