--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -8,4 +8,4 @@ jobs:
         steps:
             - name: Show the trigger
               run: |
-                echo 'Event name: ${{github.event_name}}'
+                echo "Event name: ${{github.event_name}}"
