--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -8,7 +8,7 @@ jobs:
         steps:
             - name: Show OS
               run: |
-                echo 'This job is running on an Ubuntu runner.'
+                echo "This job is running on an Ubuntu runner."
                 echo "Runner OS: $RUNNER_OS"
     windows_echo:
         runs-on: windows-latest
@@ -16,5 +16,5 @@ jobs:
             - name: Show OS
               shell: bash
               run: |
-                echo 'This job is running on a Windows runner.'
+                echo "This job is running on a Windows runner."
                 echo "Runner OS: $RUNNER_OS"
