--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -20,7 +20,7 @@ jobs:
               run: |
                 echo "Step env var: ${{ env.STEP_VAR }}"
                 echo "Step env var 2: ${{ env.STEP_VAR2 }}"
-                echo "Step env var 2: ${{ env.STEP_VAR2 }}"
+                echo "Job env var: ${{ env.JOB_VAR }}"
                 echo "Workflow env var: ${{ env.WORKFLOW_VAR }}"
                 echo "Overwritten: ${{ env.OVERWRITTEN }}"
             
@@ -28,4 +28,4 @@ jobs:
               env:
                 OVERWRITTEN: I have been overwritten at the step level
               run: |
-                  echo ""Step env var: ${{ env.OVERWRITTEN }}"
+                  echo "Step env var: ${{ env.OVERWRITTEN }}"
