--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -5,6 +5,7 @@ on: workflow_dispatch
 env:
     WORKFLOW_VAR: I am a workflow env var
     OVERWRITTEN: I will be overwritten
+    UNDEFINED_VAR_WITH_DEFAULT: ${{ vars.UNDEFINED_VAR || 'default value' }}
 
 jobs:
     echo:
@@ -24,8 +25,31 @@ jobs:
                 echo "Workflow env var: ${{ env.WORKFLOW_VAR }}"
                 echo "Overwritten: ${{ env.OVERWRITTEN }}"
             
-            - name: Overwrite job variable
+            - name: Overwriten job variable
               env:
                 OVERWRITTEN: I have been overwritten at the step level
               run: |
                   echo "Step env var: ${{ env.OVERWRITTEN }}"
+            
+    echo2:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Print Variables
+          run: |
+            echo "Repo var: ${{ vars.REPOSITORY_VAR }}"
+        
+    echo-prod:
+      runs-on: ubuntu-latest
+      environment: prod
+      steps:
+        - name: Print Prod Variables
+          run: |
+            echo "Repo var: ${{ vars.REPOSITORY_VAR }}"
+            echo "Environment var: ${{ vars.TARGET_VAR }}"
+    
+    echo-undefined:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Print Undefined Variables
+          run: |
+            echo "Org var: ${{ env.UNDEFINED_VAR_WITH_DEFAULT }}"
