Add sleep time to the workflow

--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -31,3 +31,6 @@ jobs:
               if: ${{ cancelled() }}
               run: |
                 echo: "The workflow has been cancelled"
+
+            - name: Sleep for 20 seconds
+              run: sleep 20
