--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -9,10 +9,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Failing step
-              run: |
-                exit 1
+              run: exit 1
         
             - name: Sleep for 20 seconds
+              if: ${{ !cancelled() }}
               run: sleep 20
                 
             - name: I will be skipped
@@ -33,4 +33,4 @@ jobs:
             - name: I will execute when cancelled
               if: ${{ cancelled() }}
               run: |
-                echo: "The workflow has been cancelled"
+                echo: "I will print if the workflow has been cancelled"
