--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -33,4 +33,4 @@ jobs:
             - name: I will execute when cancelled
               if: ${{ cancelled() }}
               run: |
-                echo: "I will print if the workflow has been cancelled"
+                echo "I will print if the workflow has been cancelled"
