--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -15,7 +15,7 @@ jobs:
             - name: Print PR labels
               run: |
                 cat << EOF
-                ${{ toJson(github.event.pull_request.labels) }}
+                # ${{ github.event.pull_request.labels }}
                 EOF
             
             - name: Bug step
