--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -50,3 +50,6 @@ jobs:
         needs: 
             - e2e-tests
             - load-tests
+        steps:
+            - name: Deploying to PROD
+              run: echo "Deploying to PROD"
