--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -4,6 +4,7 @@ on:
     workflow_dispatch:
         inputs:
             pass-unit-tests:
+                description: Wheter unit tests will pass or not
                 type: boolean
                 default: false
 
@@ -11,8 +12,8 @@ jobs:
     lint-build:
         runs-on: ubuntu-latest
         steps:
-            - name: Running unit tests
-              run: echo "Running tests..."
+            - name: Lint and build
+              run: echo "Linting and building project..."
             
     unit-tests:
         runs-on: ubuntu-latest
@@ -21,7 +22,7 @@ jobs:
               run: echo "Running unit tests"
             
             - name: Failing tests 
-              if: inputs.pass-unit-tests == 'false'
+              if: ${{ !inputs.pass-unit-tests }}
               run: exit 1
 
     deploy-nonprod:
@@ -32,7 +33,7 @@ jobs:
               run: echo "Deploying to nonprod..."
     
     e2e-tests:
-        runs-on: ubuntu-latests
+        runs-on: ubuntu-latest
         needs: deploy-nonprod
         steps:
             - name: Running E2E tests
@@ -43,7 +44,7 @@ jobs:
         needs: deploy-nonprod
         steps:
             - name: Runing load tests
-              run: echo "Runing load tests"
+              run: echo "Runing load tests..."
         
     deploy-prod:
         runs-on: ubuntu-latest
@@ -52,4 +53,4 @@ jobs:
             - load-tests
         steps:
             - name: Deploying to PROD
-              run: echo "Deploying to PROD"
+              run: echo "Deploying to PROD..."
