--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -22,7 +22,7 @@ jobs:
               run: echo "Running unit tests"
             
             - name: Failing tests 
-              if: ${{ !inputs.pass-unit-tests }}
+              if: inputs.pass-unit-tests == 'false'
               run: exit 1
 
     deploy-nonprod:
