Change string to bool

--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -24,7 +24,7 @@ jobs:
                 echo "Input: ${{ inputs.pass_unit_tests }}"
             
             - name: Failing tests 
-              if: inputs.pass_unit_tests == 'false'
+              if: inputs.pass_unit_tests == false
               run: exit 1
 
     deploy-nonprod:
