--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -30,7 +30,9 @@ jobs:
 
     deploy-nonprod:
         runs-on: ubuntu-latest
-        needs: lint-build
+        needs: 
+            - lint-build
+            - unit-tests
         steps:
             - name: Deploying to nonprod
               run: echo "Deploying to nonprod..."
