--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -19,11 +19,11 @@ jobs:
         steps:
             - name: Print GITHUB_OUTPUT path
               run: |
-                echo "GITHUB_OUTPUT: ${{ env.GITHUB_OUTPUT }}"
+                echo "GITHUB_OUTPUT: $GITHUB_OUTPUT"
             
             - name: Build
               id: build
-              run: echo "status=${{ inputs.build-status }}" >> "${{ env.GITHUB_OUTPUT }}"
+              run: echo "status=${{ inputs.build-status }}" >> "$GITHUB_OUTPUT"
             
     deploy:
         runs-on: ubuntu-latest
