Add mistake to workflow

--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -30,6 +30,7 @@ jobs:
                 echo "output1=value1" >> "$GITHUB_OUTPUT"
                 echo "output2=value2" >> "$GITHUB_OUTPUT"
                 cat "$GITHUB_OUTPUT"
+                echo "mistake=true" > "$GITHUB_OUTPUT"
             
     deploy:
         runs-on: ubuntu-latest
@@ -39,3 +40,7 @@ jobs:
         steps:
             - name: Deploy
               run: echo "Deploying"
+            
+            - name: Print Outputs
+              run: |
+                echo "Output 1: ${{ needs.build.outputs.output1 }}"
