--- a/.github/workflows/13-caching.yaml
+++ b/.github/workflows/13-caching.yaml
@@ -32,5 +32,5 @@ jobs:
       - name: Building
         run: npm run build
       
-      - name: Deploying to nonprod:
+      - name: Deploying to nonprod
         run: echo "Deploying to nonprod"
