--- a/.github/workflows/13-caching.yaml
+++ b/.github/workflows/13-caching.yaml
@@ -7,6 +7,14 @@ on:
         type: boolean
         description: Whether to execute cache step
         default: true
+      node-version:
+        type: choice
+        description: Node version
+        options:
+          - 18.x
+          - 20.x
+          - 21.x
+        default: 20.x
 
 jobs:
   build:
@@ -21,7 +29,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: ${{ inputs.node-version }}
       
       - name: Install dependencies
         run: npm ci
